@@ -7,7 +7,7 @@ buildscript {
     dependencies {
         classpath 'com.palantir.jakartapackagealignment:jakarta-package-alignment:0.6.0'
         classpath 'com.gradle.publish:plugin-publish-plugin:1.3.1'
-        classpath 'com.palantir.baseline:gradle-baseline-java:6.18.0'
+        classpath 'com.palantir.baseline:gradle-baseline-java:6.19.0'
         classpath 'com.palantir.gradle.consistentversions:gradle-consistent-versions:2.31.0'
         classpath 'com.palantir.gradle.externalpublish:gradle-external-publish-plugin:1.19.0'
         classpath 'com.palantir.gradle.failure-reports:gradle-failure-reports:1.13.0'
@@ -31,6 +31,7 @@ apply plugin: 'com.palantir.jdks.latest'
 apply plugin: 'com.palantir.baseline'
 apply plugin: 'com.palantir.baseline-java-versions'
 apply plugin: 'com.palantir.consistent-versions'
+apply plugin: 'com.palantir.baseline-java-versions'
 
 version System.env.CIRCLE_TAG ?: gitVersion()
 
@@ -50,12 +51,16 @@ subprojects {
     apply plugin: 'java-library'
     apply plugin: 'org.inferred.processors'
 
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+
     tasks.withType(Checkstyle).configureEach {
         enabled = false
     }
 
     tasks.withType(JavaCompile).configureEach {
         options.errorprone.disable 'PreconditionsConstantMessage', 'PreferSafeLoggableExceptions', 'PreferSafeLoggingPreconditions'
+        options.errorprone.disable 'StrictUnusedVariable'
     }
 
     // Run `./gradlew test -Drecreate=true` to recreate all the expected
@@ -65,46 +70,17 @@ subprojects {
     }
 }
 
-/**
- * There is a bunch of truly snowflaky stuff going on this project, because we have this Java14InputAstVisitor class
- * which needs to implement some interface methods defined in com.sun.source.util.TreePathScanner, which varies
- * depending on what JVM the formatter is running on!
- */
-idea.project.ipr.withXml { xml ->
-    /**
-     * Even though the p-j-f codebase has sourceCompat=11 and targetCompat=11, we have to convince IntelliJ to let us
-     * compile against methods from a newer JVM like visitYield, visitSwitchExpression etc. Hence why we turn off the
-     * --release flag (using USE_RELEASE_OPTION below)
-     */
-    def compilerConfiguration = xml.asNode().component.find({ it.'@name' == 'CompilerConfiguration' })
-    compilerConfiguration.value().add(new XmlParser().parseText('<option name="USE_RELEASE_OPTION" value="false" />'))
-    def module = compilerConfiguration.bytecodeTargetLevel.module.find({ it.'@name' == 'palantir-java-format' })
-    // Module is null on jdk11
-    if (module != null) {
-        module.attributes().target = "14"
-    }
-
-    xml.asNode().value().add(new XmlParser().parseText('''
-    <component name="JavacSettings">
-        <option name="PREFER_TARGET_JDK_COMPILER" value="false" />
-        <option name="ADDITIONAL_OPTIONS_OVERRIDE">
-        <module name="palantir-java-format" options="--add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED" />
-        </option>
-    </component>
-    '''))
+javaVersions {
+    libraryTarget = 21
+    runtime = 21
 }
 
 jdks {
-    daemonTarget = 17
+    daemonTarget = 21
 
     jdk(23) {
         distribution = 'graalvm-ce'
         jdkVersion = '23.0.1'
     }
 
-}
-
-javaVersions {
-    libraryTarget = 17
-    runtime = 17
 }
